[gd_scene load_steps=3 format=3 uid="uid://bva0iuefl7w51"]

[ext_resource type="Script" path="res://interface/menu/pause.gd" id="1_hdtr7"]

[sub_resource type="LabelSettings" id="LabelSettings_2or6o"]
font_size = 64

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hdtr7")

[node name="Contents" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="_" type="VBoxContainer" parent="Contents"]
layout_mode = 2

[node name="Header" type="VBoxContainer" parent="Contents/_"]
layout_mode = 2
size_flags_vertical = 3

[node name="Title" type="Label" parent="Contents/_/Header"]
layout_mode = 2
label_settings = SubResource("LabelSettings_2or6o")

[node name="Navigation" type="HBoxContainer" parent="Contents/_"]
layout_mode = 2

[node name="Resume" type="Button" parent="Contents/_/Navigation"]
layout_mode = 2
text = "Resume"

[node name="Return" type="Button" parent="Contents/_/Navigation"]
layout_mode = 2
text = "Return to Main"

[node name="Options" type="Button" parent="Contents/_/Navigation"]
layout_mode = 2
text = "Options"

[node name="Help" type="Button" parent="Contents/_/Navigation"]
layout_mode = 2
text = "Help
"

[node name="Quit" type="Button" parent="Contents/_/Navigation"]
layout_mode = 2
text = "Quit"

[node name="ReturnConfirmation" type="ConfirmationDialog" parent="."]
title = "Main Menu"
initial_position = 4
ok_button_text = "Yes"
dialog_text = "Do you want to return to main menu? All unsaved progress will be lost."
cancel_button_text = "No"

[node name="QuitConfirmation" type="ConfirmationDialog" parent="."]
title = "Quit Game"
initial_position = 4
ok_button_text = "Yes"
dialog_text = "Do you want to quit?"
cancel_button_text = "No"

[connection signal="pressed" from="Contents/_/Navigation/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Contents/_/Navigation/Return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="Contents/_/Navigation/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Contents/_/Navigation/Quit" to="." method="_on_quit_pressed"]
[connection signal="confirmed" from="ReturnConfirmation" to="." method="_on_return_confirmed"]
[connection signal="confirmed" from="QuitConfirmation" to="." method="_on_quit_confirmation_confirmed"]
